[gd_scene load_steps=4 format=3 uid="uid://clhlv5j6vip1f"]

[ext_resource type="Script" path="res://demo/demo.gd" id="1_qg8xp"]
[ext_resource type="Script" path="res://addons/input_event_icons/input_event_icon.gd" id="2_wugv0"]
[ext_resource type="Script" path="res://addons/input_event_icons/input_event_button.gd" id="3_7t0yw"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qg8xp")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -20.0
offset_right = 130.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Kenney Standard"

[node name="Label5" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Kenney 1 Bit"

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "InputEventIcon"

[node name="InputEventIcon" type="TextureRect" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 4
script = ExtResource("2_wugv0")

[node name="InputEventIcon2" type="TextureRect" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_wugv0")
icon_set = 1

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "InputEventButton
"

[node name="InputEventButton" type="Button" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon_alignment = 1
expand_icon = true
script = ExtResource("3_7t0yw")

[node name="InputEventButton2" type="Button" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3_7t0yw")
icon_set = 1
